--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,11 +39,11 @@
         クレジットカード情報入力
       </h1>
       <div class="form-group">
-        <div class='form-text-wrap'>
-          <label class="form-text">カード情報</label>
+        <div class='form-wrap'>
+          <p>カード番号</p>
           <span class="indispensable">必須</span>
+          <div id="number-form" class="input-default"></div>
         </div>
-        <%= f.text_field :hoge, class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
           <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
@@ -52,23 +52,18 @@
         </div>
       </div>
       <div class="form-group">
-        <div class='form-text-wrap'>
-          <label class="form-text">有効期限</label>
+        <div class='form-wrap'>
+          <p>期限</p>
           <span class="indispensable">必須</span>
-        </div>
-        <div class='input-expiration-date-wrap'>
-          <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
-          <p>月</p>
-          <%= f.text_area :hoge, class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
-          <p>年</p>
+          <div id="expiry-form" class="input-default"></div>
         </div>
       </div>
       <div class="form-group">
-        <div class='form-text-wrap'>
-          <label class="form-text">セキュリティコード</label>
+        <div class='form-wrap'>
+          <p>カード背面4桁もしくは3桁の番号</p>
           <span class="indispensable">必須</span>
+          <div id="cvc-form" class="input-default"></div>
         </div>
-        <%= f.text_field :hoge, class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
       </div>
     </div>
     <%# /カード情報の入力 %>
