--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -134,9 +134,12 @@
           <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%#<div class='sold-out'>
+        <% if item.order.presence %>
+          <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+        <% end %>
+          
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
